--- a/css/contents.css
+++ b/css/contents.css
@@ -1,31 +1,253 @@
 @charset "urf-8";
 
 
+
+
+
+
+
+
+
+/*contents_02 배너 8개짜리*/
+
+#contents_02 {
+    background: #eeeeee;
+    width: 100%;
+    height: 600px;
+}
+
+#contents_02 > .contents {
+    height: 600px;
+    width: 1400px;
+    margin: 0 auto;
+}
+
+.contents > div > div {
+    height: 300px;
+    line-height: 400px;
+    text-align: center;
+    box-sizing: border-box;
+    line-height: 400px;
+    display: block;
+    padding-top: 100px;
+}
+
+
+
+.con3_top > div {
+    float: left;
+    width: 350px;
+    height: 300px;
+}
+
+.con3_top > div > h3,
+.con3_bottom > div > h3 {
+    margin-bottom: 10px;
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 25px;
+}
+
+.con3_top > div:nth-child(1) {
+    background: #0087cc;
+}
+
+.con3_top > div:nth-child(2) {
+    background: url(../images/con03_01.jpg) no-repeat;
+    background-size: 100% 100%;
+}
+
+.con3_top > div:nth-child(3) {
+    background: #313133;
+}
+
+.con3_top > div:nth-child(3) > p {
+    color: #ffffff;
+}
+
+.con3_top > div:nth-child(4) {
+    background: url(../images/con03_02.jpg) no-repeat;
+    background-size: 100% 100%;
+}
+
+
+.con3_bottom > div {
+    float: left;
+    width: 350px;
+    height: 300px;
+}
+
+.con3_bottom > div:nth-child(1) {
+    background: url(../images/con03_03.jpg) no-repeat;
+    background-size: 100% 100%;
+}
+
+.con3_bottom > div:nth-child(2) {
+    background: #f7f7f9;
+}
+
+.con3_bottom > div:nth-child(3) {
+    background: url(../images/con03_04.jpg) no-repeat;
+    background-size: 100% 100%;
+}
+
+.con3_bottom > div:nth-child(4) {
+    background: #005793;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*contents_03*/
-#contents_03{clear: both; width: 100%;   margin-bottom: 500px; position: relative; border: 3px solid red; box-sizing: border-box;}
+#contents_03 {
+    clear: both;
+    width: 100%;
+    margin-bottom: 300px;
+    position: relative;
+    border: 1px solid #2284cf;
+    box-sizing: border-box;
+    background-color: #2284cf;
+}
 
-#contents_03 h2{font-size: 35px; font-weight: 700; text-align: center; margin-bottom: 20px; }
+#contents_03 h2 {
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #ffffff;
+    margin-top: 30px;
+}
 
-#contents_03_review{background-color: #2284cf; margin: 0 auto; width: 100%; height: 400px; text-align: center; }
-#contents_03_review_con{width: 1400px; border: 1px solid aqua; margin: 0 auto; border: 1px solid aqua;}
+#contents_03_review {
+    margin: 0 auto;
+    width: 100%;
+    height: 400px;
+    text-align: center;
+}
 
-#contents_03_review_con>div{width: 680px; height: 300px; border: 1px solid yellow; box-sizing: border-box; margin: 0; padding: 0; text-align: left; }
-#contents_03_review_con>div:nth-child(1){float: left;}
-#contents_03_review_con>div:nth-child(2){float: right;}
+#contents_03_review_con {
+    width: 1400px;
+    margin: 0 auto;
+}
 
-#contents_03_review_con ul {margin-top: 30px;}
-#contents_03_review_con ul li{color:#ffffff; height: 35px; border-bottom: 1px solid aqua; line-height: 35px; margin: 0 40px;}
-#contents_03_review_con ul li span{float: right; color: #000000; line-height: 35px;}
+#contents_03_review_con > div {
+    width: 680px;
+    height: 300px;
+    text-align: left;
+}
 
-#contents_03_webtoon{ position: absolute; left:50%; bottom:-190px; transform: translate(-50%,0); width: 1030px; text-align: center; margin: 0 auto;}
+#contents_03_review_con > div > h3 {
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 20px;
+    margin-top:
+}
 
-#contents_03_webtoon > figure{width: 300px; height: 300px; float: left; background-color: #eeeeee; border-radius: 50px 50px 0 50px; padding: 15px}
-#contents_03_webtoon > figure:nth-child(2){margin: 0 20px;}
-#contents_03_webtoon > figure h4{display: block; background: black; height: 30px; line-height: 30px; border-radius: 20px; width: 200px; margin: 0 auto; color:#ffffff; font-weight: 500; margin: 15px auto;}
-#contents_03_webtoon > figure > figcation{font-size: 22px; font-weight: 600;}
-#contents_03_webtoon > figure .con4_sum img{border-radius: 20px; box-sizing: border-box;  width: 240px; height: 150px; margin: 0 auto; margin-top: 10px;}
+#contents_03_review_con > div > h3::before {
+    content: "";
+    width: 25px;
+    padding-left: 25px;
+    background: url(../images/borad_icon_2.png) no-repeat;
+}
 
-#contents_03_webtoon > figure p:last-child{font-size: 15px; text-align: right; margin-top: 8px; margin-right: 30px; height: 30px; line-height: 30px; }
+
+
+#best_review {
+    float: left;
+}
+
+#compliment_review {
+    float: right;
+}
+
+
+
+#contents_03_review_con ul {
+    margin-top: 30px;
+}
+
+#contents_03_review_con ul li {
+    color: #ffffff;
+    height: 35px;
+    border-bottom: 1px dotted rgba(255, 255, 255, 0.5);
+    line-height: 35px;
+    margin: 0 40px;
+}
+
+#contents_03_review_con ul li span {
+    float: right;
+    color: rgba(255, 255, 255, 0.5);
+    line-height: 35px;
+    font-size: 13px;
+}
+
+#contents_03_webtoon {
+    position: absolute;
+    left: 50%;
+    bottom: -190px;
+    transform: translate(-50%, 0);
+    width: 1030px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#contents_03_webtoon > figure {
+    width: 300px;
+    height: 300px;
+    float: left;
+    background-color: #eeeeee;
+    border-radius: 50px 50px 0 50px;
+    padding: 15px
+}
+
+#contents_03_webtoon > figure:nth-child(2) {
+    margin: 0 20px;
+}
+
+#contents_03_webtoon > figure h4 {
+    display: block;
+    background: black;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 20px;
+    width: 200px;
+    margin: 0 auto;
+    color: #ffffff;
+    font-weight: 500;
+    margin: 15px auto;
+}
+
+#contents_03_webtoon > figure > figcation {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+#contents_03_webtoon > figure .con4_sum img {
+    border-radius: 20px;
+    box-sizing: border-box;
+    width: 240px;
+    height: 150px;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+#contents_03_webtoon > figure p:last-child {
+    font-size: 15px;
+    text-align: right;
+    margin-top: 8px;
+    margin-right: 30px;
+    height: 30px;
+    line-height: 30px;
+}
 
 
 
@@ -34,47 +256,150 @@
 
 
 /*contents_05*/
-#contents_05 {clear: both; width: 1200px; height: 420px; margin: 0 auto; box-sizing: border-box; margin-bottom: 100px;}
-#contents_05 h2{font-size: 35px; font-weight: 700; text-align: center; margin-bottom: 20px;}
+#contents_05 {
+    clear: both;
+    width: 1200px;
+    height: 420px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    margin-bottom: 100px;
+}
+
+#contents_05 h2 {
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
 
-#contents_05_1{float: left; width: 1200px; border: 1px solid #666666;}
+#contents_05_1 {
+    float: left;
+    width: 1200px;
+    border: 1px solid #666666;
+}
 
 
-.contents_05_video{float: left; width: 600px; height: 340px;}
-iframe{border: none; margin: 0; padding: 0;}
+.contents_05_video {
+    float: left;
+    width: 600px;
+    height: 340px;
+}
 
-#contents_05_info{float: right; width: 600px; }
+iframe {
+    border: none;
+    margin: 0;
+    padding: 0;
+}
 
-#contents_05_info h3{height: 40px;  margin-left: 40px; margin-top: 30px; margin-bottom: 40px; font-size:40px; font-weight: 700; color: #0087cc; float: left; box-shadow: 0 12px #ffd200;}
+#contents_05_info {
+    float: right;
+    width: 600px;
+}
+
+#contents_05_info h3 {
+    height: 40px;
+    margin-left: 40px;
+    margin-top: 30px;
+    margin-bottom: 40px;
+    font-size: 40px;
+    font-weight: 700;
+    color: #0087cc;
+    float: left;
+    box-shadow: 0 12px #ffd200;
+}
 
 
-#contents_05_info p:nth-of-type(1){ margin:0 40px; margin-bottom: 30px;}
+#contents_05_info p:nth-of-type(1) {
+    margin: 0 40px;
+    margin-bottom: 30px;
+}
 
-#contents_05_info p>span{font-weight: 700; margin-bottom: 5px; display: block; font-size: 20px;}
+#contents_05_info p > span {
+    font-weight: 700;
+    margin-bottom: 5px;
+    display: block;
+    font-size: 20px;
+}
 
-#contents_05_info p:nth-of-type(2){font-size: 13px; margin-left: 40px; width: 130px; height: 25px; background: url(../images/more_bar.jpg) no-repeat  -5px; cursor: pointer;}
-#contents_05_info p:nth-of-type(2) a{color:#333333;}
-#contents_05_info p:nth-of-type(2):hover a{color:#48b1ed}
-#contents_05_info p:nth-of-type(2):hover{background: url(../images/more_bar_on.jpg) no-repeat  -5px;}
+#contents_05_info p:nth-of-type(2) {
+    font-size: 13px;
+    margin-left: 40px;
+    width: 130px;
+    height: 25px;
+    background: url(../images/more_bar.jpg) no-repeat -5px;
+    cursor: pointer;
+}
+
+#contents_05_info p:nth-of-type(2) a {
+    color: #333333;
+}
+
+#contents_05_info p:nth-of-type(2):hover a {
+    color: #48b1ed
+}
+
+#contents_05_info p:nth-of-type(2):hover {
+    background: url(../images/more_bar_on.jpg) no-repeat -5px;
+}
 
 
-#contents_05_info> ul {float: right; width: 200px; display: inline;  text-align: center; margin-top: 10px; margin-right: 10px;}
-#contents_05_info> ul> li{float: right; margin-left: 10px;}
-#contents_05_info p{clear: both;}
+#contents_05_info > ul {
+    float: right;
+    width: 200px;
+    display: inline;
+    text-align: center;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+#contents_05_info > ul > li {
+    float: right;
+    margin-left: 10px;
+}
+
+#contents_05_info p {
+    clear: both;
+}
 
 
 
 
 
 /*contents_06*/
-#contents_06{clear: both;
-    height: 300px; width: 1400px; margin: 0 auto 150px auto;}
+#contents_06 {
+    clear: both;
+    height: 300px;
+    width: 1400px;
+    margin: 0 auto 150px auto;
+}
 
-#contents_06 h3{border-left: 5px solid #48b1ed; height: 16px; line-height: 16px; padding-left: 8px;}
+#contents_06 h3 {
+    border-left: 5px solid #48b1ed;
+    height: 16px;
+    line-height: 16px;
+    padding-left: 8px;
+}
 
-#contents_06 h3+p {font-weight: 800; font-size: 30px; margin-bottom: 20px;}
+#contents_06 h3 + p {
+    font-weight: 800;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
 
-#contents_06 div{width: 100%; height: 220px; margin: 0 auto;}
-#contents_06 div ul{text-align: center;}
-#contents_06 div ul li{display: inline-block;margin-right: 10px; border: 1px solid #cccccc; box-sizing: border-box;}
+#contents_06 div {
+    width: 100%;
+    height: 220px;
+    margin: 0 auto;
+}
+
+#contents_06 div ul {
+    text-align: center;
+}
+
+#contents_06 div ul li {
+    display: inline-block;
+    margin-right: 10px;
+    border: 1px solid #cccccc;
+    box-sizing: border-box;
+}
