--- a/css/top.css
+++ b/css/top.css
@@ -1,5 +1,9 @@
 @charset "urf-8";
-body,html{height: 100%;}
+
+body,
+html {
+    height: 100%;
+}
 
 
 /*top_wrap*/
@@ -25,6 +29,30 @@ body,html{height: 100%;}
     min-height: 100%;
 }
 
+.patten {
+    width: 100%;
+    height: 100%;
+    background: url(../images/patten.png);
+    opacity: 0.2;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.over {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+
+
+
+
+
 /**/
 
 #top {
@@ -39,18 +67,18 @@ body,html{height: 100%;}
 .quick_wrap1 {
     width: 100%;
     height: 50px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);  
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     min-width: 1920px;
 }
 
 .quick_wrap2 {
     border: 1px solid aqua;
-    width: 1800px;
+    width: 1400px;
     height: 50px;
     margin: 0 auto;
 }
 
-.logo{
+.logo {
     width: 146px;
     height: 50px;
     border: 1px solid orange;
@@ -62,9 +90,7 @@ body,html{height: 100%;}
     height: 20px;
     border: 1px solid blue;
     float: right;
-    background: rgba(255,255,255,0.2)
-    
-    
+    background: rgba(255, 255, 255, 0.2)
 }
 
 .quick li {
@@ -95,21 +121,26 @@ body,html{height: 100%;}
 
 #main_navi {
     border: 1px solid aqua;
-    flex: left;
-    width: 1300px;
+    float: right;
+    margin: 0 auto;
+    width: 500px;
     height: 60px;
 }
 
 #main_navi ul {
-    width: 900px;
+    float: right;
+    width: 500px;
     height: 60px;
     text-align: right;
     line-height: 60px;
+    background-color:blue;
 }
 
 #main_navi ul li {
-    display: inline;
-    margin-left: 30px;
+    float: right;
+    display: inline-block;
+    margin-left: 15px;
+    background-color: bisque;
 }
 
 #main_navi ul li:first-child {
@@ -118,8 +149,9 @@ body,html{height: 100%;}
 
 #main_navi ul li a {
     color: #ffffff;
-    font-size: 18px;
+    font-size: 22px;
     padding-bottom: 15px;
+    font-weight: 700;
 }
 
 #main_navi ul li a:hover {
@@ -128,20 +160,147 @@ body,html{height: 100%;}
 
 
 
-#main_top_1{position: absolute; left:300px; top:270px;}
-#main_top_1>h1{font-size: 20px; line-height: 20px; color:#ffffff; border-bottom: 2px solid ; width: 340px; height: 22px; display: block; margin-bottom: 20px; font-weight: 500;}
-#main_top_1>p:nth-of-type(1){color:#0087cc; font-size: 80px; font-weight: 900; display: block; height: 70px; line-height: 60px;}
-#main_top_1>p:nth-of-type(2){color:#ffffff; font-size: 80px; font-weight: 900; display: block; height: 70px;  line-height: 60px; margin-bottom: 20px;}
-#main_top_1>p:nth-of-type(3){color:#ffffff; font-weight: 300; font-size: 18px;}
+#main_top_1 {
+    position: absolute;
+    left: 300px;
+    top: 270px;
+    z-index: 10;
+}
+
+#main_top_1 > h1 {
+    font-size: 20px;
+    line-height: 20px;
+    color: #ffffff;
+    border-bottom: 2px solid;
+    width: 340px;
+    height: 22px;
+    display: block;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+#main_top_1 > p:nth-of-type(1) {
+    color: #0087cc;
+    font-size: 80px;
+    font-weight: 900;
+    display: block;
+    height: 70px;
+    line-height: 60px;
+}
+
+#main_top_1 > p:nth-of-type(2) {
+    color: #ffffff;
+    font-size: 80px;
+    font-weight: 900;
+    display: block;
+    height: 70px;
+    line-height: 60px;
+    margin-bottom: 20px;
+}
+
+#main_top_1 > p:nth-of-type(3) {
+    color: #ffffff;
+    font-weight: 300;
+    font-size: 18px;
+}
 
 
-#main_top_2{
-    clear: both; 
-    position: absolute; left:50%; bottom:80px; transform: translate(-50%, 0);
-    border: 1px solid red; width: 1400px; height: 80px; background: rgba(72,177,237,0.7); text-align: center;}
+#main_top_2 {
+    clear: both;
+    position: absolute;
+    left: 50%;
+    bottom: 80px;
+    transform: translate(-50%, 0);
+    border: 1px solid red;
+    width: 100%;
+    height: 100px;
+    background: rgba(0, 135, 204, 0.9);
+    text-align: center;
+}
 
-#main_top_2>div{}
-#main_top_2>div>ul{text-align: center; width: 1170px; margin: 0 auto;}
-#main_top_2>div>ul>li{float: left; color: #ffffff;  display: block; height: 50px; width: 130px; text-align: center; font-size: 20px; line-height: 20px; margin-top:15px;}
+#main_top_2 > div {
+    margin: auto;
+    line-height: 100px;
+    width: 900px;
+    height: 100px;
+    border: 1px solid aqua;
+
+}
+
+#main_top_2 > div > ul {
+    text-align: center;
+    width: 900px;
+    line-height: 100px;
+}
+
+#main_top_2 > div > ul > li {
+    float: left;
+    color: #ffffff;
+    height: 100px;
+    width: 100px;
+    text-align: center;
+    font-size: 15px;
+    line-height: 20px;
+    padding-top: 30px;
+}
+
+#main_top_2 > div > ul > li:nth-child(1){
+    color:red;
+}
+
+#main_top_2 > div > ul > li:nth-child(1){
+    color:red;
+}
+
+#main_top_2 > div > ul > li:nth-child(1){
+    color:red;
+}
+
+#main_top_2 > div > ul > li:nth-child(1){
+    color:red;
+}
+
+#main_top_2 > div > ul > li:nth-child(1){
+    color:red;
+}
+
+#main_top_2 > div > ul > li:nth-child(1){
+    color:red;
+}
+
+#main_top_2 > div > ul > li:nth-child(1){
+    color:red;
+}
+
+#main_top_2 > div > ul > li:nth-child(1){
+    color:red;
+}
+
+#main_top_2 > div > ul > li:nth-child(1){
+    color:red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
