--- a/css/contents.css
+++ b/css/contents.css
@@ -3,17 +3,97 @@
 
 
 
+#contents_01{width: 1300px; height: 500px; margin: 0 auto;}
+#contents_01_con{width: 1400px; height: 400px; border: 1px solid #28d600; margin: 0 auto;}
+
+#contents_01_con>div{width: 310px; height: 310px; float: left; border-right: 2px solid #eeeeee;}
+
+#contents_01_con>div>h3{
+    font-size: 20px;
+    font-weight: 500;
+    
+}
+
+#contents_01_con>div:last-child{border-right: none;}
 
 
 
 
 
-/*contents_02 배너 8개짜리*/
+/*contents_02_top*/
+#contents_02_top{
+    background: #eeeeee;
+    width: 100%;
+    height: 250px;
+}
+#contente2_1{
+    border: 1px solid aqua;
+    height: 200px;
+    width: 1400px;
+    margin: 0 auto;
+}
+
+
+
+#contente2_1>.title{
+    float: left;
+    border: 1px solid red;
+    width: 600px;
+    text-align: right;
+}
+
+.title>h2{
+    color: #313131;
+    font-size: 40px;
+    font-weight: 700;
+
+}
+
+.title>h2>em{
+    color:#0082ce;
+    font-size: 40px;
+    font-weight: 700;
+    
+}
+
+
+#contente2_1>.con{
+    float: right;
+    border: 1px solid red;
+    width: 700px;
+    
+}
+
+.no1{font-size: 0;}
+.no2{font-size: 0;}
+
+#list1,#list2{
+    border: 3px solid #333333;
+    width: 200px;
+    height: 50px;
+    display: block;
+    float: left;
+    font-size: 16px;
+    font-weight: 700;
+    float: left;
+}
+
+
+label{float: left;}
+
+.result{clear: both; display: block;}
+.result li{width: 140px; height: 30px; border: 1px solid red; text-align: center; float: left;}
+
+
+
+
+/*contents_02_banner 배너 8개짜리*/
 
 #contents_02 {
     background: #eeeeee;
     width: 100%;
     height: 600px;
+    padding-bottom: 150px;
 }
 
 #contents_02 > .contents {
