--- a/css/contents.css
+++ b/css/contents.css
@@ -1,30 +1,167 @@
 @charset "urf-8";
 
 
+.menu_title {
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #058ece;
+    margin-top: 30px;
+}
+
+
+#contents_00 {
+
+    width: 1400px;
+    height: 300px;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+
+
+#contents_00> h2{
+    color:#333333;
+margin-bottom: 50px;
+    text-align: center;
+    font-size: 35px;
+    
+}
+
+#contents_00> h2>i{color: red;}
+
+#contents_00 > ul {
+    width: 1225px;
+    margin: 0 auto;
+    height: 120px;
+
+}
+
+#contents_00 > ul > li {
+
+    width: 230px;
+    height: 120px;
+    display: inline-block;
+    padding-left: 160px;
+    padding-top: 13px;
+}
+
+#contents_00 > ul > li:nth-child(1) {
+    background: url(../images/con00_01.png)no-repeat 0 0;
+    width: 250px;
+}
+
+#contents_00 > ul > li:nth-child(2) {
+    background: url(../images/con00_02.png)no-repeat 10px 0;
+    padding-left: 140px;
+}
+
+#contents_00 > ul > li:nth-child(3) {
+    background: url(../images/con00_03.png)no-repeat 0 0;
+    width: 260px;
+    padding-left: 170px;
+}
+
+#contents_00 > ul > li:nth-child(3) p {
+    letter-spacing: -1px;
+}
+
+#contents_00 > ul > li:nth-child(3) h4 {
+    width: 140px;
+}
+
+#contents_00 > ul > li:nth-child(1) h4{width: 80px;}
+
+#contents_00 h4 {
+    margin-bottom: 0px;
+    font-weight: 300;
+    font-size: 15px;
+    background: #313133;
+    color: #ffffff;
+    width: 95px;
+    border-radius: 20px;
+    padding-left: 12px;
+}
+
+#contents_00 span {
+    font-size: 40px;
+    font-weight: 900;
+    letter-spacing: -3px;
+    line-height: 50px;
+    margin-bottom: 10px;
+    display: block;
+}
+
+#contents_00 em {
+    letter-spacing: 0;
+    font-size: 18px;
+}
+
 
 /*contents_01*/
-#contents_01{width: 1300px; height: 500px; margin: 0 auto;}
-#contents_01_con{width: 1400px; height: 400px; border: 1px solid #28d600; margin: 0 auto; }
+#contents_01 {
+    width: 1400px;
+    height: 700px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+}
 
-#contents_01_con>div{width: 270px; height: 210px; float: left; border: 2px solid #eeeeee; margin-right: 5px; padding: 30px; position: relative;}
+#contents_01 > h2 {
+    line-height: 40px;
+}
 
-#contents_01_con>div:nth-of-type(1){
+#contents_01 > h2 > span {
+    color: #058ece;
+    font-size: 35px;
+    font-weight: 200;
+}
+
+#contents_01_con1 {
+    float: left;
+    border: 2px solid #eeeeee;
+    width: 846px;
+    height: 551px;
+}
+
+#contents_01_con2 {
+    width: 545px;
+    height: 561px;
+    float: right;
+}
+
+#contents_01_con2 > div {
+    width: 270px;
+    height: 275px;
+    float: left;
+    border: 2px solid #eeeeee;
+    position: relative;
+    box-sizing: border-box;
+}
+
+#contents_01_con2 > div:nth-of-type(1) {
     background: url(../images/con01_01.jpg) no-repeat 0 0;
-    
+    margin-right: 5px;
+    margin-bottom: 5px;
 }
 
-#contents_01_con>div:nth-of-type(2){
+#contents_01_con2 > div:nth-of-type(2) {
     background: url(../images/con01_02.jpg) no-repeat 0 0;
-    
+    margin-bottom: 5px;
+
 }
 
-#contents_01_con>div:nth-of-type(3){
+#contents_01_con2 > div:nth-of-type(3) {
+    margin-right: 5px;
+    clear: both;
+
     background: url(../images/con01_03.jpg) no-repeat 0 0;
-    
+
 }
 
+#contents_01_con2 > div:nth-of-type(4) {}
 
-#contents_01_con>div>em{
+
+#contents_01_con2 > div > em {
     display: block;
     background: #48b1ed;
     width: 120px;
@@ -35,11 +172,11 @@
     position: absolute;
     right: 15px;
     bottom: 15px;
-    
+
 }
 
 
-#contents_01_con > h2{
+#contents_01_con2 > h2 {
     font-size: 35px;
     font-weight: 700;
     text-align: center;
@@ -47,10 +184,10 @@
     margin-top: 30px;
 }
 
-#contents_01_con>div>h3{
+#contents_01_con2 > div > h3 {
     font-size: 22px;
     font-weight: 600;
-    
+
 }
 
 
@@ -60,12 +197,13 @@
 
 
 /*contents_02_top*/
-#contents_02_top{
+#contents_02_top {
     background: #eeeeee;
     width: 100%;
     height: 250px;
 }
-#contente2_1{
+
+#contente2_1 {
     border: 1px solid aqua;
     height: 200px;
     width: 1400px;
@@ -74,39 +212,45 @@
 
 
 
-#contente2_1>.title{
+#contente2_1 > .title {
     float: left;
     border: 1px solid red;
     width: 600px;
     text-align: right;
 }
 
-.title>h2{
+.title > h2 {
     color: #313131;
     font-size: 40px;
     font-weight: 700;
 
 }
 
-.title>h2>em{
-    color:#0082ce;
+.title > h2 > em {
+    color: #0082ce;
     font-size: 40px;
     font-weight: 700;
-    
+
 }
 
 
-#contente2_1>.con{
+#contente2_1 > .con {
     float: right;
     border: 1px solid red;
     width: 700px;
-    
+
 }
 
-.no1{font-size: 0;}
-.no2{font-size: 0;}
+.no1 {
+    font-size: 0;
+}
 
-#list1,#list2{
+.no2 {
+    font-size: 0;
+}
+
+#list1,
+#list2 {
     border: 3px solid #333333;
     width: 200px;
     height: 50px;
@@ -118,10 +262,22 @@
 }
 
 
-label{float: left;}
+label {
+    float: left;
+}
 
-.result{clear: both; display: block;}
-.result li{width: 140px; height: 30px; border: 1px solid red; text-align: center; float: left;}
+.result {
+    clear: both;
+    display: block;
+}
+
+.result li {
+    width: 140px;
+    height: 30px;
+    border: 1px solid red;
+    text-align: center;
+    float: left;
+}
 
 
 
