--- a/css/top_sub.css
+++ b/css/top_sub.css
@@ -14,7 +14,7 @@ html {
 }
 
 #sub2 {
-    background: url(../images/sub_ex.jpg);
+    background: url(../images/sub_menu1.jpg);
     bottom: 0;
     width: 100%;
     min-width: 1920px;
