--- a/css/bottom.css
+++ b/css/bottom.css
@@ -1,8 +1,11 @@
 @charset "urf-8";
 
 
-#bottom_wrap{clear: both; background-color: #191919; height: 230px; font-size: 15px; padding-top: 30px; width: 100%; min-width: 1400px; }
-#bottom{margin: 0 auto; width:1400px; height: 200px;}
+#bottom_wrap{clear: both;  background-color: #191919; height: 230px; font-size: 15px; padding-top: 30px; width: 100%; min-width: 1400px; position: relative; }
+#bottom{margin: 0 auto; width:1400px; height: 200px;
+background: url(../images/bottom_logo2.png) no-repeat 1180px 100px;
+    
+}
 
 
 .ft_left {width: 300px; float: left; text-align: center; width: 280px; margin-right: 20px; height: 200px; line-height: 20px; border-right: 1px solid #383435; }
@@ -27,3 +30,7 @@
 
 .ft_right address{margin: 10px 0;}
 .ft_right p:nth-of-type(2){margin-bottom: 10px; font-size: 13px;} /*맨하단 copyright*/
+
+
+
+
