--- a/css/contents.css
+++ b/css/contents.css
@@ -684,5 +684,7 @@ iframe {
     display: inline-block;
     margin-right: 10px;
     border: 1px solid #cccccc;
-    box-sizing: border-box;
+
+    width: 200px;
+    height: 200px;
 }
